# Y5S1-EngenhariaSoftwareSeguro

./: README.md
Labs/: Logbook01.md  Logbook02.md  Logbook03.md  Logbook04.md  Logbook05.md  README.md
Notes/: 01 - Security Concepts.md  02 - Threat Model.md  03 - Blockchain.md  Exam.md
Project/: README.md  compose.prod.yml  compose.yml  flake.nix  poetry-requirements.txt
Project/apps/authentication_server/: .env.example  pyproject.toml
Project/apps/authentication_server/authentication_server/: __init__.py  env.py  models.py  routes.py
Project/apps/authentication_server/authentication_server/templates/: 2fa.html  admin_menu.html  admin_modify_user_menu.html  admin_remove_suc.html  invalid_admin.html  invalid_email_or_password.html  invalid_nonce_or_email.html  login.html  login_failed.html  modify_user.html  nonce_expired.html  nonce_sent.html  register.html  register_existing_username.html  register_sucessful.html
Project/apps/authorization_server/: .env.example  pyproject.toml
Project/apps/authorization_server/authorization_server/: __init__.py  env.py  logic.py  models.py  token.py  validation.py
Project/apps/authorization_server/authorization_server/routes/: __init__.py  admin.py
Project/apps/resource_server/: .env  .env.example  pyproject.toml
Project/apps/resource_server/resource_server/: __init__.py  env.py  models.py  routes.py
Project/apps/resource_server/resource_server/middleware/: __init__.py  validation.py
Project/apps/web_server/: .env  .env.example  pyproject.toml
Project/apps/web_server/web_server/: __init__.py  env.py
Project/apps/web_server/web_server/middleware/: __init__.py
Project/apps/web_server/web_server/routes/: __init__.py
Project/apps/web_server/web_server/routes/admin/: __init__.py
Project/apps/web_server/web_server/templates/: add-operation.html  add-resource.html  add-role.html  add-user.html  edit-user.html  home.html  index.html  view-resources.html  view-roles.html  view-users.html
Project/deploy/: apps.containerfile  scripts.containerfile
Project/deploy/apps/: entrypoint_dev.sh  entrypoint_prod.sh
Project/deploy/scripts/: entrypoint.sh
Project/dev/: update_lockfiles.sh
Project/docs/: report.tex
