[tool.poetry]
name = "authorization-server"
version = "0.1.0"
description = ""
authors = [
    "André Costa Lima <up202008169@edu.fe.up.pt>",
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
secure-endpoints = {path = "../../packages/secure_endpoints", develop = true}
pydantic = "^2.10.3"
cert-manager = {path = "../../packages/cert_manager", develop = true}
cryptography = "^44.0.0"
flask-pydantic = "^0.12.0"
utils = {path = "../../packages/utils", develop = true}
flask-admin = {extras = ["sqlalchemy"], version = "^1.6.1"}
wtforms = "3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.poetry.scripts]
format = "black:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
